--- a/.github/workflows/solana-verified-build.yml
+++ b/.github/workflows/solana-verified-build.yml
@@ -12,9 +12,16 @@ jobs:
   build:
     runs-on: ubuntu-latest-8cores-32GB
     steps:
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.inputs.sha }}
+        fetch-depth: 0
     - name: Get full SHA
       id: get_sha
-      run: echo "full_sha=$(git rev-parse ${{ github.event.inputs.sha }})" >> $GITHUB_OUTPUT
+      run: |
+        FULL_SHA=$(git rev-parse ${{ github.event.inputs.sha }})
+        echo "full_sha=$FULL_SHA" >> $GITHUB_OUTPUT
+        echo "short_sha=${FULL_SHA:0:12}" >> $GITHUB_OUTPUT
     - uses: actions/checkout@v4
       with:
         ref: ${{ steps.get_sha.outputs.full_sha }}
@@ -42,7 +49,7 @@ jobs:
       uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.2.1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag_name: solana-artifacts-localtest-${{ steps.get_sha.outputs.full_sha }}
+        tag_name: solana-artifacts-localtest-${{ steps.get_sha.outputs.short_sha }}
         target_commitish: ${{ steps.get_sha.outputs.full_sha }}
         files: |
           chains/solana/contracts/artifacts.tar.gz
