--- a/.github/workflows/solana-verified-build.yml
+++ b/.github/workflows/solana-verified-build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       sha:
-        description: 'SHA to build'
+        description: 'SHA to build (can be short)'
         required: true
         type: string
 
@@ -14,7 +14,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        ref: ${{ github.event.inputs.sha }}
+        fetch-depth: 0
+    - name: Get full SHA
+      id: get_sha
+      run: |
+        FULL_SHA=$(git rev-parse ${{ github.event.inputs.sha }})
+        echo "full_sha=$FULL_SHA" >> $GITHUB_OUTPUT
+        echo "short_sha=${FULL_SHA:0:12}" >> $GITHUB_OUTPUT
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ steps.get_sha.outputs.full_sha }}
         fetch-depth: 0
     - uses: actions-rust-lang/setup-rust-toolchain@9399c7bb15d4c7d47b27263d024f0a4978346ba4 # v1
     - name: Install Solana Verify
@@ -39,8 +48,8 @@ jobs:
       uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.2.1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag_name: solana-artifacts-localtest-${{ github.event.inputs.sha }}
-        target_commitish: ${{ github.event.inputs.sha }}
+        tag_name: solana-artifacts-localtest-${{ steps.get_sha.outputs.short_sha }}
+        target_commitish: ${{ steps.get_sha.outputs.full_sha }}
         files: |
           chains/solana/contracts/artifacts.tar.gz
           chains/solana/contracts/target/deploy/*.so
