Add cu validation for token pools

--- a/chains/solana/Makefile
+++ b/chains/solana/Makefile
@@ -55,6 +55,10 @@ go-tests:
 ccip-router-contracts-go-tests:
 	go test -run TestCCIPRouter -v -failfast ./... -json -covermode=atomic -coverpkg=./... -coverprofile=integration_coverage.txt 2>&1 | tee /tmp/gotest.log | gotestloghelper -ci=true -singlepackage=true -hidepassingtests=false -hidepassinglogs=false
 
+.PHONY: test-token-pool-contracts-go-tests
+test-token-pool-contracts-go-tests:
+	go test -run TestBaseTokenPoolHappyPath -v -failfast ./... -json -covermode=atomic -coverpkg=./... -coverprofile=integration_coverage.txt 2>&1 | tee /tmp/gotest.log | gotestloghelper -ci=true -singlepackage=true -hidepassingtests=false -hidepassinglogs=false
+
 .PHONY: build-contracts
 build-contracts:
 	cd ./contracts && anchor build
