--- a/.github/workflows/solana-verified-build.yml
+++ b/.github/workflows/solana-verified-build.yml
@@ -37,8 +37,9 @@ jobs:
       uses: actions/cache@v4 # v4
       with:
         path: chains/solana/contracts/target/deploy/*.so
-        key: ${{ runner.os }}-solana-contract-verified-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-solana-contract-verified-${{ hashFiles('chains/solana/contracts/**/*.rs', 'chains/solana/contracts/**/Cargo.lock') }}
     - name: Build Verified Artifacts
+      if: steps.cache-target.outputs.cache-hit != 'true'
       run: |
         cd chains/solana/contracts
         solana-verify build
@@ -54,4 +55,3 @@ jobs:
         target_commitish: ${{ steps.get_sha.outputs.full_sha }}
         files: |
           chains/solana/contracts/artifacts.tar.gz
-          chains/solana/contracts/target/deploy/*.so
