--- a/chains/evm/package.json
+++ b/chains/evm/package.json
@@ -17,40 +17,21 @@
   },
   "files": [
     "foundry.toml",
-    "src/v0.8/ccip/**/*.sol",
-    "src/v0.8/shared/access/*.sol",
-    "src/v0.8/shared/call/CallWithExactGas.sol",
-    "src/v0.8/shared/enumerable/EnumerableMapBytes32.sol",
-    "src/v0.8/shared/enumerable/EnumerableMapAddresses.sol",
-    "src/v0.8/shared/enumerable/EnumerableSetWithBytes16.sol",
-    "src/v0.8/shared/interfaces/IOwnable.sol",
-    "src/v0.8/shared/interfaces/ITypeAndVersion.sol",
-    "src/v0.8/shared/interfaces/IERC677Receiver.sol",
-    "src/v0.8/shared/interfaces/AggregatorV3Interface.sol",
-    "src/v0.8/shared/interfaces/AccessControllerInterface.sol",
-    "src/v0.8/shared/token/**/*.sol",
-    "src/v0.8/shared/util/SortedSetValidationUtil.sol",
-    "src/v0.8/keystone/interfaces/**/*",
-    "src/v0.8/keystone/KeystoneFeedsPermissionHandler.sol",
-    "src/v0.8/keystone/lib/KeystoneFeedDefaultMetadataLib.sol",
-    "src/v0.8/vendor/openzeppelin-solidity/v4.8.3",
-    "src/v0.8/vendor/openzeppelin-solidity/v5.0.2",
-    "src/v0.8/vendor/Context.sol",
-    "src/v0.8/vendor/Pausable.sol",
-    "abi/v0.8/",
-    "src/v0.8/ccip/LICENSE.md",
-    "src/v0.8/ccip/v1.5-CCIP-License-grants.md",
-    "!src/v0.8/ccip/test/**/*",
-    "src/v0.8/ccip/test/mocks/**/*",
-    "!src/v0.8/ccip/test/mocks/test/*",
-    "scripts/native_solc_compile_all_ccip"
+    "contracts/**/*.sol",
+    "contracts/LICENSE.md",
+    "contracts/v1.5-CCIP-License-grants.md",
+    "!contracts/test/**/*",
+    "contracts/test/mocks/**/*",
+    "!contracts/test/mocks/test/*",
+    "scripts/compile_all",
+    "abi/v0.8/"
   ],
   "engines": {
-    "node": ">=18",
+    "node": ">=22",
     "pnpm": ">=10"
   },
   "dependencies": {
-    "@changesets/cli": "~2.27.8",
+    "@changesets/cli": "^2.28.1",
     "@changesets/get-github-info": "^0.6.0",
     "semver": "^7.6.3",
     "chainlink-evm": "git://github.com/smartcontractkit/chainlink-evm.git#82c959593df22527067f74b52dff0a289058dc30"
@@ -61,7 +42,7 @@
   },
   "pnpm": {
     "overrides": {
-      "@babel/runtime": ">=7.26.10 "
+      "@babel/runtime": "^7.26.10 "
     }
   }
 }
