--- a/chains/evm/.changeset/config.json
+++ b/chains/evm/.changeset/config.json
@@ -1,16 +1,16 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.3.1/schema.json",
   "changelog": [
-    "../../../../.changeset/changelog-generator.js",
+    "./changelog-generator.js",
     {
-      "repo": "smartcontractkit/chainlink"
+      "repo": "smartcontractkit/chainlink-ccip"
     }
   ],
   "commit": false,
   "fixed": [],
   "linked": [],
   "access": "public",
-  "baseBranch": "develop",
+  "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "ignore": []
 }
