--- a/.github/actions/setup-nodejs/action.yaml
+++ b/.github/actions/setup-nodejs/action.yaml
@@ -19,16 +19,16 @@ runs:
       with:
         node-version: "20"
         cache: "pnpm"
-        cache-dependency-path: "${{ inputs.base-path }}/contracts/pnpm-lock.yaml"
+        cache-dependency-path: "${{ inputs.base-path }}/chains/evm/pnpm-lock.yaml"
 
     - if: ${{ inputs.prod == 'false' }}
       name: Install dependencies
       shell: bash
       run: pnpm i
-      working-directory: ${{ inputs.base-path }}/contracts
+      working-directory: ${{ inputs.base-path }}/chains/evm
 
     - if: ${{ inputs.prod == 'true' }}
       name: Install prod dependencies
       shell: bash
       run: pnpm i --prod
-      working-directory: ${{ inputs.base-path }}/contracts
+      working-directory: ${{ inputs.base-path }}/chains/evm
