--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,11 @@
 # 2024-12-04 - The codeowners file is correct
 * @smartcontractkit/ccip-offchain
 
+# EVM contracts
+/chains/evm @smartcontractkit/ccip-onchain
+.github/workflows/**solidity** @smartcontractkit/ccip-onchain
+
 # solana development ownership
 /chains/solana @smartcontractkit/ccip-onchain-solana
 ./github/workflows/solana.yml @smartcontractkit/ccip-onchain-solana
+
