add simple foundry scripts for off-chain testing

--- a/chains/evm/foundry.toml
+++ b/chains/evm/foundry.toml
@@ -4,6 +4,7 @@ evm_version = 'paris'
 
 src = 'contracts'
 test = 'contracts'
+script = 'contracts'
 out = 'foundry-artifacts'
 cache_path = 'foundry-cache'
 libs = ['node_modules']
