forge fmt and update github action to exclude scripts

--- a/.github/workflows/solidity-foundry.yml
+++ b/.github/workflows/solidity-foundry.yml
@@ -93,6 +93,7 @@ jobs:
               - '!chains/evm/contracts/**/mocks/**'
               - '!chains/evm/contracts/**/*.t.sol'
               - '!chains/evm/contracts/*.t.sol'
+              - '!chains/evm/contracts/*.s.sol'
               - '!chains/evm/contracts/**/testhelpers/**'
               - '!chains/evm/contracts/testhelpers/**'
               - '!chains/evm/contracts/vendor/**'
