update github action to exclude scripts from coverage requirements

--- a/.github/workflows/solidity-foundry.yml
+++ b/.github/workflows/solidity-foundry.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           cat <<EOF > matrix.json
           [
-            { "name": "ccip", "setup": { "run-coverage": true, "min-coverage": 98.7, "extra-coverage-params": "--no-match-path='*End2End*'", "run-gas-snapshot": true}}
+            { "name": "ccip", "setup": { "run-coverage": true, "min-coverage": 98.7, "extra-coverage-params": "--no-match-path='*End2End*|*.s.sol'", "run-gas-snapshot": true}}
           ]
           EOF
 
