--- a/chains/evm/package.json
+++ b/chains/evm/package.json
@@ -34,6 +34,7 @@
     "pnpm": ">=10"
   },
   "dependencies": {
+    "@openzeppelin/contracts@5": "npm:@openzeppelin/contracts@5.0.2",
     "@changesets/cli": "^2.28.1",
     "@changesets/get-github-info": "^0.6.0",
     "semver": "^7.6.3",
