--- a/chains/solana/contracts/programs/fee-quoter/Cargo.toml
+++ b/chains/solana/contracts/programs/fee-quoter/Cargo.toml
@@ -25,3 +25,6 @@ ccip_common = {path = "../ccip-common"}
 
 [dev-dependencies]
 hex = "0.4.3"
+
+[build-dependencies]
+build_commit = { path = "../../crates/build-commit" }
