--- a/chains/solana/contracts/programs/rmn-remote/Cargo.toml
+++ b/chains/solana/contracts/programs/rmn-remote/Cargo.toml
@@ -19,3 +19,6 @@ default = []
 anchor-lang = "0.29.0"
 bytemuck = "1.7"
 ccip_common = {path = "../ccip-common"}
+
+[build-dependencies]
+build_commit = { path = "../../crates/build-commit" }
