--- a/chains/solana/contracts/programs/ccip-offramp/Cargo.toml
+++ b/chains/solana/contracts/programs/ccip-offramp/Cargo.toml
@@ -27,3 +27,6 @@ ccip_common = {path = "../ccip-common"}
 
 [dev-dependencies]
 hex = "0.4.3"
+
+[build-dependencies]
+build_commit = { path = "../../crates/build-commit" }
