--- a/.github/workflows/solana.yml
+++ b/.github/workflows/solana.yml
@@ -53,7 +53,7 @@ jobs:
       if: steps.cache-image.outputs.cache-hit != 'true'
       run: |
         cd contracts
-        docker buildx build . -t ccip-solana:build --build-arg ANCHOR_CLI=${{ needs.get_anchor_version.outputs.anchor_version }} --env CCIP_BUILD_GIT_HASH={{ github.sha }}
+        docker buildx build . -t ccip-solana:build --build-arg ANCHOR_CLI=${{ needs.get_anchor_version.outputs.anchor_version }} --env CCIP_BUILD_GIT_HASH=${{ github.sha }}
         docker save -o docker-build.tar ccip-solana
     - name: build & save contract compilation artifacts
       if: steps.cache-target.outputs.cache-hit != 'true'
@@ -62,7 +62,7 @@ jobs:
           set -eoux pipefail &&\
           RUSTUP_HOME=\"/root/.rustup\" &&\
           FORCE_COLOR=1 &&\
-          CCIP_BUILD_GIT_HASH={{ github.sha }} &&\
+          CCIP_BUILD_GIT_HASH=${{ github.sha }} &&\
           cd /solana/contracts &&\
           anchor build &&\
           chmod -R 755 ./target"
@@ -95,7 +95,7 @@ jobs:
           set -eoux pipefail &&\
           RUSTUP_HOME=\"/root/.rustup\" &&\
           FORCE_COLOR=1 &&\
-          CCIP_BUILD_GIT_HASH={{ github.sha }} &&\
+          CCIP_BUILD_GIT_HASH=${{ github.sha }} &&\
           cd /solana/contracts &&\
           anchor build &&\
           cargo check &&\
@@ -144,7 +144,7 @@ jobs:
           set -eoux pipefail &&\
           RUSTUP_HOME=\"/root/.rustup\" &&\
           FORCE_COLOR=1 &&\
-          CCIP_BUILD_GIT_HASH={{ github.sha }} &&\
+          CCIP_BUILD_GIT_HASH=${{ github.sha }} &&\
           cd /solana/contracts &&\
           anchor build"
           make go-tests
@@ -185,7 +185,7 @@ jobs:
           set -eoux pipefail &&\
           RUSTUP_HOME=\"/root/.rustup\" &&\
           FORCE_COLOR=1 &&\
-          CCIP_BUILD_GIT_HASH={{ github.sha }} &&\
+          CCIP_BUILD_GIT_HASH=${{ github.sha }} &&\
           cd /solana/contracts &&\
           rm -rf target/idl target/types &&\
           anchor build"
